# autobot

./: .gitignore  LICENSE  README.md  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: ci.yml
configs/: acl_templates.yaml  network_specs.yaml  refactoring_rules.yaml  security_baseline.yaml
scripts/: pre_commit_check.py  run_scan.sh
src/: __init__.py  __main__.py
src/agent/: __init__.py  context.py  orchestrator.py  pipeline.py
src/network/: __init__.py  spec_validator.py
src/refactor/: __init__.py  engine.py  pr_generator.py
src/scanner/: __init__.py  code_scanner.py  techdebt_detector.py
src/security/: __init__.py  baseline_checker.py
src/testing/: __init__.py  device_simulator.py  test_runner.py
src/utils/: __init__.py  config.py  logger.py
tests/integration/: test_pipeline.py
tests/simulation/: test_device_simulator.py
tests/unit/: test_scanner.py  test_security.py
